Added text and styling

--- a/index.html
+++ b/index.html
@@ -16,7 +16,6 @@
     <header class="center-row">
             <nav>
                 <input type="checkbox" id="nav-check">
-
                 <div class="nav-btn">
                     <label for="nav-check">
                         <span></span>
@@ -24,25 +23,28 @@
                         <span></span>
                     </label>
                 </div>
-
                 <div class="nav-link center-row">
-                    <a href="#">About Me</a>
+                    <a href="#about">About Me</a>
                     <a href="#">Projects</a>
                     <a href="#">Experience</a>
                     <a href="#">Contact</a>
                 </div>
-
             </nav>
-
     </header>
 
     <section class="about-section center-row">
-    
+    <!-- About Section -->
             <div class="about-image-container center-row">
                 <img src="/img/portfolio-pic.png" alt="Damian Savage">
             </div>
 
-            <div class="about-section center-column">
+            <div class="contact">
+                <img src="./img/mdi_linkedin.png" alt="" style="width: 40px;" onclick="window.open('https://www.linkedin.com/in/damian-savage')">
+                <img src="./img/mdi_github.png" alt="" style="width: 40px;"onclick="window.open('https://www.github.com/dsavage13')">
+                <img src="./img/ic_baseline-email.png" alt="" style="width: 40px;" onclick="window.open('mailto:savagedamian99@gmail.com')">
+            </div>
+
+            <div class="about-section center-column" id="about">
                 <div class="about-description-container center-column">
                     <h1>HI! MY NAME IS DAMIAN SAVAGE</h1>
                     <h2>Junior Software Developer</h2>
@@ -54,7 +56,8 @@
     </section>
 
     <section class="skills-section center-column">
-        <h2>Skills</h2>
+    <!-- Skills Section -->
+        <h2>Skills / Languages</h2>
         <div class="skills-list ">
                 <label class="text-label">HTML</label>
                 <label class="text-label">CSS</label>
@@ -62,11 +65,18 @@
                 <label class="text-label">Python</label>
                 <label class="text-label">React</label>
                 <label class="text-label">Flask</label>
-                <label class="text-label">SKILL</label>
-                <label class="text-label">SKILL</label>
-                <label class="text-label">SKILL</label>
-                <label class="text-label">SKILL</label>
+                <label class="text-label">Agile/SCRUM</label>
+                <label class="text-label">SQLite</label>
+                <label class="text-label">Git & GitHUB</label>
+                <label class="text-label">Node.Js</label>
         </div>
     </section>
+    
+    <section>
+        <!-- Project Section -->
+        <div class=""></div>
+
+    </section>
+
 </body>
 </html>
